# lobbing

./: README.md
auto_aim_interfaces/: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/armor_detector/include/armor_detector/: armor.hpp  armor_pose_estimator.hpp  ba_solver.hpp  detector.hpp  detector_node.hpp  graph_optimizer.hpp  thread_pool.hpp  thread_safe_quene.hpp  yolo.hpp  yolov5.hpp
install/armor_detector/lib/armor_detector/: armor_detector_node
install/armor_detector/share/armor_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/armor_tracker/include/armor_tracker/: tracker.hpp  tracker_node.hpp
install/armor_tracker/lib/armor_tracker/: armor_tracker_node
install/armor_tracker/share/armor_tracker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/building_transform_interface/share/building_transform_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/detector/include/detector/: guide_light_detector.hpp  lob_tracker.hpp  lob_vision_node.hpp
install/detector/lib/detector/: lob_vision_node_exec
install/detector/share/detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/hik_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rm_gimbal_description/share/rm_gimbal_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rm_planner/include/rm_planner/: rm_planner.hpp  rm_planner_node.hpp  target.hpp
install/rm_planner/lib/rm_planner/: rm_planner_node
install/rm_planner/share/rm_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
install/rm_serial_driver/lib/rm_serial_driver/: rm_serial_driver_node  virtual_serial_node
install/rm_serial_driver/share/rm_serial_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rm_tools/include/rm_tools/: extended_kalman_filter.hpp  manual_compensator.hpp  math.hpp  pnp_solver.hpp  rotation_bridge.hpp  trajectory_compensator.hpp
install/rm_tools/share/rm_tools/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rm_vision_bringup/share/rm_vision_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
rm_auto_aim/armor_detector/include/armor_detector/: armor_pose_estimator.hpp  ba_solver.hpp  graph_optimizer.hpp  thread_pool.hpp  yolo.hpp
rm_auto_aim/armor_detector/src/: armor.cpp  yolov5.cpp
rm_auto_aim/armor_tracker/include/armor_tracker/: tracker.hpp
rm_auto_aim/armor_tracker/src/: tracker.cpp  tracker_node.cpp
rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
rm_planner/: CMakeLists.txt
rm_planner/include/rm_planner/: rm_planner.hpp  rm_planner_node.hpp
rm_planner/include/rm_planner/tinympc/: CMakeLists.txt
rm_planner/src/: rm_planner.cpp  rm_planner_node.cpp  target.cpp
rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
rm_serial_driver/src/: rm_serial_driver.cpp  vitural_serial.cpp
rm_tools/: CMakeLists.txt  package.xml
rm_tools/include/rm_tools/: extended_kalman_filter.hpp  manual_compensator.hpp  math.hpp  pnp_solver.hpp  trajectory_compensator.hpp
rm_tools/src/: extended_kalman_filter.cpp  manual_compensator.cpp  math.cpp  pnp_solver.cpp  trajectory_compensator.cpp
rm_vision/rm_vision_bringup/config/: launch_params.yaml  node_params.yaml
rm_vision/rm_vision_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
src/building_transform_interface/: CMakeLists.txt  package.xml
src/building_transform_interface/msg/: BaseArmor.msg
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/src/: hik_camera_node.cpp
src/rm_auto_aim/armor_detector/: CMakeLists.txt
src/rm_auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  thread_safe_quene.hpp  yolov5.hpp
src/rm_auto_aim/armor_detector/src/: armor_pose_estimator.cpp  ba_solver.cpp  detector.cpp  detector_node.cpp  graph_optimator.cpp  yolo.cpp
src/rm_auto_aim/armor_tracker/: package.xml
src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/rm_lob_det/: CMakeLists.txt  README.md  package.xml
src/rm_lob_det/config/: lob_vision_params.yaml
src/rm_lob_det/include/detector/: guide_light_detector.hpp  lob_tracker.hpp  lob_vision_node.hpp
src/rm_lob_det/launch/: detector.launch.py
src/rm_lob_det/src/: guide_light_detector.cpp  lob_tracker.cpp  lob_vision_node.cpp
src/rm_planner/: package.xml
src/rm_planner/include/rm_planner/: rm_planner_node.hpp  target.hpp
src/rm_planner/src/: rm_planner_node.cpp
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/include/rm_serial_driver/: packet.hpp
src/rm_serial_driver/src/: rm_serial_driver.cpp  vitural_serial.cpp
src/rm_tools/: CMakeLists.txt
src/rm_tools/include/rm_tools/: extended_kalman_filter.hpp  manual_compensator.hpp  math.hpp  pnp_solver.hpp  rotation_bridge.hpp  trajectory_compensator.hpp
src/rm_tools/src/: extended_kalman_filter.cpp  manual_compensator.cpp  math.cpp  pnp_solver.cpp  rotation_bridge.cpp  trajectory_compensator.cpp
src/rm_vision/: Dockerfile
src/rm_vision/rm_vision_bringup/: package.xml
(+396 files in other folders)
